_k8s/install/yaml/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostNetwork: true
      hostPID: true
      containers:
        - name: node-exporter
          image: prom/node-exporter:v1.10.2
          args: [--path.procfs=/host/proc,--path.sysfs=/host/sys,--path.rootfs=/host/root]
          ports:
            - containerPort: 9100
          volumeMounts:
            - {name: proc, mountPath: /host/proc, readOnly: true}
            - {name: sys, mountPath: /host/sys, readOnly: true}
            - {name: root, mountPath: /host/root, readOnly: true}
      volumes:
        - {name: proc, hostPath: {path: /proc}}
        - {name: sys, hostPath: {path: /sys}}
        - {name: root, hostPath: {path: /}}
